--- a/fornecedor/pom.xml
+++ b/fornecedor/pom.xml
@@ -51,6 +51,13 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
+		<!-- Devtools -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 		<!-- Config Client -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
